# conversion-eval

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Doc/: PROJECT_HANDOVER.md  cobol_relations_design_memo.md  conversion_eval_design.md  rag_evaluation_design.md  rag_ingest_comparison_plan.md
config/: noise_rules.yaml  patterns.yaml
input/sample/: アイディアの生み出し方_研修資料.pptx
input/sample/contracts/nda/: R7_menu_260217.xlsx
scripts/: clear_generated.ps1
src/conversion_eval/: __init__.py  detection.py  folder_markers.py  main.py  models.py
src/conversion_eval/config/: __init__.py  env.py  loader.py
src/conversion_eval/converters/: __init__.py  base.py  com_direct.py  docling_converter.py  markitdown_converter.py  office_embedded_ocr_converter.py  unimplemented.py
src/conversion_eval/metrics/: __init__.py  failure.py  noise.py  structural.py
src/conversion_eval/noise/: __init__.py  normalizer.py
src/conversion_eval/pipeline/: __init__.py  pipeline.py  runner.py
src/conversion_eval/preprocessors/: __init__.py  base.py  com.py  com_pdf.py  libreoffice.py  none_preprocessor.py  unimplemented.py
src/conversion_eval/reports/: __init__.py  human_eval.py  raw_writer.py  summary.py
src/conversion_eval/sampling/: __init__.py  stratified.py
